Not a viable prototype.  This is a computer-change commit.

--- a/reveal.javapresent/index.html
+++ b/reveal.javapresent/index.html
@@ -16,10 +16,28 @@
     <div class="reveal">
         <!-- Wrap all slides in a single "slides" class -->
         <div class="slides">
+            <section><h1>Who am I?</h1></section>
 
+            <section>
+                <h1>Why this talk?</h1>
+                <p></p></section>
+            <section><h1>Who are you?</h1></section>
+            <section><h1>Let's divide you up:</h1>
+            </section>
+            <section><h1>What can generics do for you</h1>
+                //todo ruthie mention the source is just oracle.
+                <ul><li>They add type checks at compile time.</li>
+                    <li>They can help you avoid casting.</li>
+                    <li>They allow you to write generic algorithms that work on collections of different types.</li>
+                </ul>
+            </section>
+            <section><h1>bare bones box example</h1></section>
+            <section><h1>Now where are generics for you?</h1>
+                <p>You can see them in the android documentation.</p>
+                <p>Or can you?</p></section>
             <!-- ALL SLIDES GO HERE -->
             <!-- Each section element contains an individual slide -->
-            <section>
+            <!-- <section>
                 <h1>About My Product</h1>
                 <p>My product discussed here</p>
             </section>
@@ -34,7 +52,7 @@
                 <h1>Slide 3</h1>
                 <p>How does one revisit an arbitrary slide in code?</p>
                 <p>Visit internal slide<a href="#/show-a-link"> 2</a>
-            </section>
+            </section> -->
 
             </div>
     </div>
