95% done.  Ruthie you should stop meddling now.

--- a/reveal.javapresent/index.html
+++ b/reveal.javapresent/index.html
@@ -41,7 +41,7 @@
                 <p class="fragment">
                     You're an expert on generics and worried about wasting your time.
                 </p>
-                <ul class="fragment"><li>Then take <a href="http://docs.oracle.com/javase/tutorial/java/generics/QandE/generics-questions.html">this quiz.</a></li></ul>
+                <ul class="fragment"><li> <a href="http://docs.oracle.com/javase/tutorial/java/generics/QandE/generics-questions.html">Pop quiz.</a></li></ul>
             </section>
             <section><h1>Generics...</h1>
                 <ul><li>were introduced in J2SE 5.0 (September 2004)</li></ul></section>
@@ -71,7 +71,21 @@
                 <p class="fragment">Or can you?</p></section>
 
             <section><h1>Of course you can.</h1>
-                <p>You'll just not see the word "generic."</p></section>
+                <p>You'll just not see the word "generic."</p>
+
+            </section>
+
+            <section>
+                <img class="fragment" src="images/anddoc1.png">
+                <p>...</p>
+                <img class="fragment" src="images/anddoc2.png">
+            </section>
+
+            <section><h1>Additional Reading:</h1>
+                <ul><li><a href="http://oracle.com.edgesuite.net/timeline/java/">An entertaining, scrollable tour of Java's history.</a></li>
+                <li><a href="https://docs.oracle.com/javase/tutorial/java/generics/why.html">The Java Tutorials Page</a></li>
+                <li><a href="https://www.youtube.com/watch?v=9tHLV0u87G4">A YouTube video, if you're that kind of learner.</a></li>
+                </ul></section>
             <!-- ALL SLIDES GO HERE -->
             <!-- Each section element contains an individual slide -->
             <!-- <section>
