Just stop fiddling with it, already.

--- a/reveal.javapresent/index.html
+++ b/reveal.javapresent/index.html
@@ -16,8 +16,11 @@
     <div class="reveal">
         <!-- Wrap all slides in a single "slides" class -->
         <div class="slides">
+            <section><h1>Generics, Android and You.</h1>
+                <img src="images/qrcode.jpg" width="30%">
+            </section>
             <section><h1>Who am I?</h1>
-                <img src="images/qrcode.jpg"></section>
+            </section>
 
             <section>
                 <h1>Why this talk?</h1>
@@ -33,15 +36,15 @@
 
 
             <section><h1>Let's divide you up:</h1>
-                <p class="fragment">
-                    Generics are new to you and you're ready to hear more.
+                <ul class="fragment">
+                    <li>Generics are new to you and you're ready to hear more.</li></ul>
 
                 </p>
                 <ul class="fragment"><li>Then just don't leave the room.</li></ul>
-                <p class="fragment">
-                    You're an expert on generics and worried about wasting your time.
+                <ul class="fragment">
+                    <li>You're an expert on generics and worried about wasting your time.</li></ul>
                 </p>
-                <ul class="fragment"><li> <a href="http://docs.oracle.com/javase/tutorial/java/generics/QandE/generics-questions.html">Pop quiz.</a></li></ul>
+                <ul class="fragment"><li> Pop quiz:<a href="http://docs.oracle.com/javase/tutorial/java/generics/QandE/generics-questions.html"> http://bit.ly/24kDOku</a></li></ul>
             </section>
             <section><h1>Generics...</h1>
                 <ul><li>were introduced in J2SE 5.0 (September 2004)</li></ul></section>
@@ -76,7 +79,7 @@
             </section>
 
             <section>
-                <img class="fragment" src="images/anddoc1.png">
+                <img src="images/anddoc1.png">
                 <p>...</p>
                 <img class="fragment" src="images/anddoc2.png">
             </section>
@@ -86,6 +89,9 @@
                 <li><a href="https://docs.oracle.com/javase/tutorial/java/generics/why.html">The Java Tutorials Page</a></li>
                 <li><a href="https://www.youtube.com/watch?v=9tHLV0u87G4">A YouTube video, if you're that kind of learner.</a></li>
                 </ul></section>
+
+            <section><p>Hopefully this has been an exciting toe-dip into Java generics.  </p><p>I'm a gigantic dork and can be found on twitter: </p><p><a href="http://twitter.com/theonlyruthie">@theonlyruthie</a></p>
+            </section>
             <!-- ALL SLIDES GO HERE -->
             <!-- Each section element contains an individual slide -->
             <!-- <section>
