Fix broken image links.

--- a/reveal.javapresent/index.html
+++ b/reveal.javapresent/index.html
@@ -79,9 +79,10 @@
             </section>
 
             <section>
-                <img src="images/anddoc1.png">
+                <img src="images/AndDoc1.png">
                 <p>...</p>
-                <img class="fragment" src="images/anddoc2.png">
+                <img class="fragment" src="images/AndDoc2
+                .png">
             </section>
 
             <section><h1>Additional Reading:</h1>
